# Mcp-Agent

./: README.md  pyproject.toml
examples/: basic_example.py
mcp_agent/: __init__.py  agent.py  client.py  server.py  tool.py
